k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heads-up
spec:
  selector:
    app: heads-up
  ports:
    - port: 80
      targetPort: 8000
